--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <h1>はじめてのバージョン管理</h1>
         <P>Gitを使ってバージョン管理する。</P>
+        <p>リポジトリの初期化からはじめていきます。</p>
         <img src="git-logo.png" alt="git logo">
     </body>
 </html>
