modify index.html on GitHub

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>はじめてのバージョン管理</h1>
         <P>Gitを使ってバージョン管理する。</P>
         <p>リポジトリの初期化からはじめていきます。</p>
+        <P>初期化は<i>git init</i>コマンドを使用しています。</P>
         <img src="git-logo.png" alt="git logo">
     </body>
 </html>
